--- a/app/src/main/res/layout/activity_opciones.xml
+++ b/app/src/main/res/layout/activity_opciones.xml
@@ -6,33 +6,8 @@
     android:layout_height="match_parent"
     android:minHeight="0dp">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="338dp"
-        android:layout_height="194dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginStart="192dp"
-        android:layout_marginTop="28dp"
-        android:contentDescription="@android:string/untitled"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
-
     <Button
-        android:id="@+id/button"
-        android:layout_width="211dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="420dp"
-        android:text="Regresar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnPerfil"
         android:layout_width="222dp"
         android:layout_height="70dp"
         android:layout_marginEnd="81dp"
@@ -43,15 +18,15 @@
         tools:layout_editor_absoluteY="236dp" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnVentas"
         android:layout_width="222dp"
         android:layout_height="70dp"
         android:layout_marginEnd="81dp"
         android:layout_marginStart="81dp"
         android:layout_marginTop="16dp"
-        android:text="Editar Notificaciones"
+        android:text="Mis Ventas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/btnPerfil" />
 
 </android.support.constraint.ConstraintLayout>
