Catalogo terminado, Mis Ventas terminado

--- a/app/src/main/res/layout/acitivy_login.xml
+++ b/app/src/main/res/layout/acitivy_login.xml
@@ -7,10 +7,13 @@
     android:gravity="center"
     android:orientation="vertical">
 
+
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="192dp"
-        android:layout_height="124dp"
+        android:id="@+id/logo"
+        android:layout_width="323dp"
+        android:layout_height="196dp"
+        android:layout_weight="1"
+        android:adjustViewBounds="false"
         app:srcCompat="@drawable/logo" />
 
     <Button
@@ -44,12 +47,12 @@
         android:textSize="24sp" />
 
     <Button
-        android:id="@+id/button_exit"
+        android:id="@+id/btnOrdenes"
         android:layout_width="170dp"
         android:layout_height="64dp"
         android:layout_margin="15dp"
         android:background="?attr/colorError"
-        android:text="Salir"
+        android:text="Órdenes"
         android:textColor="@android:color/background_light"
         android:textSize="24sp" />
 
