--- a/app/src/main/res/layout/activity_opciones.xml
+++ b/app/src/main/res/layout/activity_opciones.xml
@@ -13,6 +13,7 @@
         android:layout_marginEnd="81dp"
         android:layout_marginStart="81dp"
         android:text="Editar Perfil"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="236dp" />
