--- a/app/src/main/res/layout/activity_vender.xml
+++ b/app/src/main/res/layout/activity_vender.xml
@@ -37,7 +37,7 @@
             tools:layout_editor_absoluteY="137dp" />
 
         <EditText
-            android:id="@+id/descripcion"
+            android:id="@+id/vendedor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
